--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,22 @@
 *.exe
 *.out
 *.app
+*.ipch
+*.db
+cpp/.vs/AdventOfCode2024/v17/Browse.VC.opendb
+cpp/.vs/AdventOfCode2024/v17/Browse.VC.db-wal
+cpp/.vs/AdventOfCode2024/v17/Browse.VC.db-shm
+cpp/.vs/AdventOfCode2023/v17/Browse.VC.opendb
+cpp/.vs/AdventOfCode2023/v17/Browse.VC.db-wal
+cpp/.vs/AdventOfCode2023/v17/Browse.VC.db-shm
+cpp/.vs/AdventOfCode2023/project-colors.json
+cpp/x64/Debug/AdventOfCode2024.vcxproj.FileListAbsolute.txt
+cpp/x64/Debug/AdventOfCode2024.tlog/link.write.1.tlog
+cpp/x64/Debug/AdventOfCode2024.tlog/link.read.1.tlog
+cpp/x64/Debug/AdventOfCode2024.tlog/link.command.1.tlog
+cpp/x64/Debug/AdventOfCode2024.tlog/CL.write.1.tlog
+cpp/x64/Debug/AdventOfCode2024.tlog/CL.read.1.tlog
+cpp/x64/Debug/AdventOfCode2024.tlog/CL.command.1.tlog
+cpp/x64/Debug/AdventOfCode2024.tlog/AdventOfCode2024.lastbuildstate
+cpp/x64/Debug/vc143.idb
+cpp/x64/Debug/AdventOfCode2024.exe.recipe
