--- a/cpp/AdventOfCode2024.vcxproj
+++ b/cpp/AdventOfCode2024.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="src\day01.cpp" />
     <ClCompile Include="src\day02.cpp" />
+    <ClCompile Include="src\day03.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\templateday.cpp" />
   </ItemGroup>
@@ -29,6 +30,9 @@
     <Text Include="..\data\01\test.txt" />
     <Text Include="..\data\02\real.txt" />
     <Text Include="..\data\02\test.txt" />
+    <Text Include="..\data\03\real.txt" />
+    <Text Include="..\data\03\test.txt" />
+    <Text Include="..\data\03\test2.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
