--- a/cpp/AdventOfCode2024.vcxproj
+++ b/cpp/AdventOfCode2024.vcxproj
@@ -23,6 +23,8 @@
     <ClCompile Include="src\day02.cpp" />
     <ClCompile Include="src\day03.cpp" />
     <ClCompile Include="src\day04.cpp" />
+    <ClCompile Include="src\day05.cpp" />
+    <ClCompile Include="src\day06.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\templateday.cpp" />
   </ItemGroup>
@@ -36,6 +38,10 @@
     <Text Include="..\data\03\test2.txt" />
     <Text Include="..\data\04\real.txt" />
     <Text Include="..\data\04\test.txt" />
+    <Text Include="..\data\05\real.txt" />
+    <Text Include="..\data\05\test.txt" />
+    <Text Include="..\data\06\real.txt" />
+    <Text Include="..\data\06\test.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
