--- a/cpp/AdventOfCode2024.vcxproj
+++ b/cpp/AdventOfCode2024.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="src\day04.cpp" />
     <ClCompile Include="src\day05.cpp" />
     <ClCompile Include="src\day06.cpp" />
+    <ClCompile Include="src\day07.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\templateday.cpp" />
   </ItemGroup>
@@ -42,6 +43,8 @@
     <Text Include="..\data\05\test.txt" />
     <Text Include="..\data\06\real.txt" />
     <Text Include="..\data\06\test.txt" />
+    <Text Include="..\data\07\real.txt" />
+    <Text Include="..\data\07\test.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
