--- a/cpp/AdventOfCode2024.vcxproj
+++ b/cpp/AdventOfCode2024.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="src\day14.cpp" />
     <ClCompile Include="src\day15.cpp" />
     <ClCompile Include="src\day16.cpp" />
+    <ClCompile Include="src\day17.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\templateday.cpp" />
@@ -80,6 +81,9 @@
     <Text Include="..\data\16\real.txt" />
     <Text Include="..\data\16\test.txt" />
     <Text Include="..\data\16\test2.txt" />
+    <Text Include="..\data\17\real.txt" />
+    <Text Include="..\data\17\test.txt" />
+    <Text Include="..\data\17\test2.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Renderer.h" />
