--- a/cpp/AdventOfCode2024.vcxproj
+++ b/cpp/AdventOfCode2024.vcxproj
@@ -36,6 +36,7 @@
     <ClCompile Include="src\day15.cpp" />
     <ClCompile Include="src\day16.cpp" />
     <ClCompile Include="src\day17.cpp" />
+    <ClCompile Include="src\day18.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\templateday.cpp" />
@@ -84,6 +85,8 @@
     <Text Include="..\data\17\real.txt" />
     <Text Include="..\data\17\test.txt" />
     <Text Include="..\data\17\test2.txt" />
+    <Text Include="..\data\18\real.txt" />
+    <Text Include="..\data\18\test.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Renderer.h" />
