--- a/cpp/AdventOfCode2024.vcxproj
+++ b/cpp/AdventOfCode2024.vcxproj
@@ -37,8 +37,10 @@
     <ClCompile Include="src\day16.cpp" />
     <ClCompile Include="src\day17.cpp" />
     <ClCompile Include="src\day18.cpp" />
+    <ClCompile Include="src\day19.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
+    <ClCompile Include="src\String.cpp" />
     <ClCompile Include="src\templateday.cpp" />
     <ClCompile Include="src\Vec2.cpp" />
   </ItemGroup>
@@ -87,9 +89,12 @@
     <Text Include="..\data\17\test2.txt" />
     <Text Include="..\data\18\real.txt" />
     <Text Include="..\data\18\test.txt" />
+    <Text Include="..\data\19\real.txt" />
+    <Text Include="..\data\19\test.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Renderer.h" />
+    <ClInclude Include="src\String.h" />
     <ClInclude Include="src\Vec2.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
